camel-hello/src/main/fabric8/route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: ${project.artifactId}
    provider: fabric8
    version: "1.0"
    group: com.redhat.training
  name: ${project.artifactId}
spec:
  host: ${hostname}
  port:
    targetPort: ${rest-port}
  to:
    kind: Service
    name: ${project.artifactId}
